syntax = "proto3";

option csharp_namespace = "RatingService";

package rating;

service ReservationGRPCService {
  rpc CheckIfUserCanRate (RatingData) returns (CanRate);
}

message RatingData {
  string UserId = 1; 
  string RatedEntityId = 2;
  int32 RatedEntityType = 3;
}

message CanRate {
  bool ratingAllowed = 1;
}